deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow-app
  template:
    metadata:
      labels:
        app: wisecow-app
    spec:
      containers:
        - name: wisecow-container
          image: deepashelar11/wisecow-demo:latest
          ports:
            - containerPort: 4499
