service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-app-service
spec:
  selector:
    app: wisecow-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4499
      nodePort: 30080
  type: NodePort
